--- a/public/cdt.html
+++ b/public/cdt.html
@@ -71,10 +71,12 @@
         <span>同じルームURLにアクセスすると、タイマー操作や設定を同期することができます。</span><br>
         <input type="text" id="set_room_url_txt" name="set_room_url_txt" readonly/> <button onclick="copyToClipboard()">コピー</button>
         <br><button id="set_room_url_btn" name="set_room_url_btn" onclick="ClickGenerateButton()">ルームURL生成</button>
+        <div id="qrcode"></div>
       </div>
     </div>
   </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.5.2/jscolor.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
